questions 6-7 of brexit poll analysis assessmment

--- a/4 Inference and Modeling/Brexit Poll Analysis.Rmd
+++ b/4 Inference and Modeling/Brexit Poll Analysis.Rmd
@@ -40,7 +40,7 @@ p <- 0.481    # official proportion voting "Remain"
 d <- 2*p-1    # official spread
 ```
 
-### Question 1: Expected value and standard error of a poll 
+### Question 1: Expected value and standard error of a poll
 
 The final proportion of voters choosing “Remain” was 𝑝=0.481 . Consider a poll with a sample of 𝑁=1500 voters.
 
@@ -81,7 +81,7 @@ What is the standard error of 𝑑 , the spread between the proportion of “Rem
 2*sqrt(p*(1-p)/N)
 ```
 
-### Question 2: Actual Brexit poll estimates 
+### Question 2: Actual Brexit poll estimates
 
 Load and inspect the brexit_polls dataset from dslabs, which contains actual polling data for the 6 months before the Brexit vote. Raw proportions of voters preferring “Remain”, “Leave”, and “Undecided” are available (remain, leave, undecided) The spread is also available (spread), which is the difference in the raw proportion of voters choosing “Remain” and the raw proportion choosing “Leave”.
 
@@ -90,23 +90,163 @@ Calculate x_hat for each poll, the estimate of the proportion of voters choosing
 What is the average of the observed spreads (spread)?
 
 ```{r}
-
+mean(brexit_polls$spread)
 ```
 
 What is the standard deviation of the observed spreads?
 
 ```{r}
-
+sd(brexit_polls$spread)
 ```
 
 What is the average of x_hat, the estimates of the parameter
 
 ```{r}
-
+brexit_polls <- brexit_polls %>% 
+                  mutate(x_hat = (spread + 1) /2)
+mean(brexit_polls$x_hat)
 ```
 
 What is the standard deviation of x_hat?
 
 ```{r}
-
+sd(brexit_polls$x_hat)
 ```
+
+### Question 3: Confidence interval of a Brexit poll
+
+Consider the first poll in brexit_polls, a YouGov poll run on the same day as the Brexit referendum:
+
+Use qnorm() to compute the 95% confidence interval for 𝑋̂.
+
+What is the lower bound of the 95% confidence interval?
+
+```{r}
+x_hat2 <- brexit_polls[1,]$x_hat
+N <- brexit_polls[1,]$samplesize
+se2 <- sqrt(x_hat2 * (1 - x_hat2) / N)
+x_hat2 - qnorm(0.975) * se2
+```
+
+What is the upper bound of the 95% confidence interval?
+
+```{r}
+x_hat2 + qnorm(0.975) * se2
+```
+
+Does the 95% confidence interval predict a winner (does not cover p=0.5)? Does the 95% confidence interval cover the true value of p observed during the referendum?
+
+```{r}
+!between(0.5, x_hat2 - qnorm(.975)*se2, x_hat2 + qnorm(.975)*se2)    # predicts winner
+between(0.481, x_hat2 - qnorm(.975)*se2, x_hat2 + qnorm(.975)*se2)    # does not cover p
+```
+
+# Brexit poll analysis - Part 2
+
+```{r}
+# suggested libraries
+library(tidyverse)
+
+# load brexit_polls object and add x_hat column
+library(dslabs)
+data(brexit_polls)
+brexit_polls <- brexit_polls %>%
+    mutate(x_hat = (spread + 1)/2)
+
+# final proportion voting "Remain"
+p <- 0.481
+```
+
+### Question 4: Confidence intervals for polls in June
+
+Create the data frame june_polls containing only Brexit polls ending in June 2016 (enddate of “2016-06-01” and later). We will calculate confidence intervals for all polls and determine how many cover the true value of 𝑑.
+
+First, use mutate() to calculate a plug-in estimate se_x_hat for the standard error of the estimate SE^[1](https://rstudio-pubs-static.s3.amazonaws.com/709447_61b5af1beb004f55abbb7e6927b66a04.html#fn1)^ for each poll given its sample size and value of 𝑋̂ (x_hat). Second, use mutate() to calculate an estimate for the standard error of the spread for each poll given the value of se_x_hat. Then, use mutate() to calculate upper and lower bounds for 95% confidence intervals of the spread. Last, add a column hit that indicates whether the confidence interval for each poll covers the correct spread 𝑑=−0.038.
+
+How many polls are in june_polls?
+
+```{r}
+june_polls <- brexit_polls %>% filter(enddate >= '2016-06-01') 
+nrow(june_polls)
+```
+
+What proportion of polls have a confidence interval that covers the value 0?
+
+```{r}
+d <- -0.38
+june_polls <- june_polls %>%
+  mutate(se_x_hat = sqrt(x_hat * (1-x_hat)/ samplesize), se_spread = 2*se_x_hat,
+         lower = spread - qnorm(0.975) * se_spread,
+         upper = spread + qnorm(0.975) * se_spread,
+         hit = (lower < 2*p-1 & upper > 2*p-1))
+mean(june_polls$lower < 0 & june_polls$upper > 0)
+```
+
+# Brexit poll analysis - Part 2
+
+```{r}
+# suggested libraries
+library(tidyverse)
+
+# load brexit_polls object and add x_hat column
+library(dslabs)
+data(brexit_polls)
+brexit_polls <- brexit_polls %>%
+    mutate(x_hat = (spread + 1)/2)
+
+# final proportion voting "Remain"
+p <- 0.481
+```
+
+### Question 4: Confidence intervals for polls in June 
+
+```{r}
+d <- -0.038 #correct spread
+june_polls <- brexit_polls %>%
+  filter(enddate >= "2016-06-01") %>%
+  mutate(se_x_hat = sqrt(x_hat * (1-x_hat)/samplesize)) %>%
+  mutate(se_spread = 2*se_x_hat) %>%
+  mutate(
+    lower = spread - qnorm(0.975)*se_spread,
+    upper = spread + qnorm(0.975)*se_spread,
+    hit = (lower < d & upper > d)
+  )
+
+#How many polls are in june_polls?
+length(june_polls$pollster)
+
+#What proportion of polls have a confidence interval that covers the value 0?
+covers_0 <- june_polls %>% mutate(cover_0 = lower < 0 & upper > 0) %>% .$cover_0
+class(covers_0)
+mean(covers_0)
+
+#What proportion of polls predict "Remain" (confidence interval entirely above 0?)
+remain <- june_polls %>% mutate(remain = lower > 0 & upper > 0) %>% .$remain
+mean(remain)
+
+#What proportions of polls have a confidence interval covering the true value of d?
+mean(june_polls$hit)
+```
+
+### Question 5: Hit rate by pollster
+
+Group and summarize the `june_polls` object by pollster to find the proportion of hits for each pollster and the number of polls per pollster. Use `arrange()` to sort by hit rate.
+
+```{r}
+june_polls %>% 
+  group_by(pollster) %>%
+  summarize(proportion_hits = mean(hit == TRUE), polls = n()) %>% arrange(desc(proportion_hits))
+  
+```
+
+### Question 6: Boxplot of Brexit polls by poll type 
+
+Make a boxplot of the spread in `june_polls` by poll type.
+
+```{r}
+june_polls %>% ggplot(aes(poll_type, spread)) + 
+  geom_boxplot() +
+  geom_jitter()
+```
+
+\
